[tool.poetry]
name = "nonparametric-irt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nonparametric_irt"}]

[tool.poetry.dependencies]
python = "3.8.10"
pyomo = "^6.5.0"
numpy = "^1.24.3"
pandas = "^2.0.0"
joblib = "^1.2.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
loguru = "^0.7.0"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
